crates/nash-can/src/snapshots/nash_can__module__tests__union_unbound_type_var.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\ntype MyType 'a\n    = MyTag 'b\n"
info: diagnostic
---
nash::names::type_vars_unbound_in_union

  × The `MyType` type uses an unbound type variable `b` in its definition:
   ╭─[src/Main.nash:4:13]
 2 │ 
 3 │ type MyType 'a
 4 │     = MyTag 'b
   ·             ──
   ╰────
  help: Declare the type variables:

            type MyType 'a 'b = ...
