crates/nash-can/src/snapshots/nash_can__module__tests__unknown_trait_in_context.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nid : Eq 'a => 'a -> 'a\nid x = x\n"
---
[
    NotFoundTrait {
        region: Region {
            start: Position {
                line: 3,
                column: 6,
            },
            end: Position {
                line: 3,
                column: 8,
            },
        },
        prefix: None,
        name: "Eq",
    },
]
