crates/nash-can/src/snapshots/nash_can__module__tests__unknown_trait_in_impl.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimpl Eq int where\n    eq a b = true\n"
info: diagnostic
---
nash::names::not_found_trait

  × Unknown trait `Eq`.
   ╭─[src/Main.nash:3:6]
 2 │ 
 3 │ impl Eq int where
   ·      ──
 4 │     eq a b = true
   ╰────
  help: Define or import this name.
