crates/nash-can/src/snapshots/nash_can__module__tests__unused_func_arg_warning.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf x = 42\n"
info: diagnostic
---
nash::warning::unused_variable

  ⚠ Unused variable `x`.
   ╭─[src/Main.nash:3:3]
 2 │ 
 3 │ f x = 42
   ·   ─
   ╰────
  help: Replace `x` with `_`.
