crates/nash-can/src/snapshots/nash_can__module__tests__unused_import_warning.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nimport Foo\n\nx = 1\n"
info: diagnostic
---
nash::warning::unused_import

  ⚠ Unused import `Foo`.
   ╭─[src/Main.nash:3:8]
 2 │ 
 3 │ import Foo
   ·        ───
 4 │ 
   ╰────
  help: Remove the import.
