crates/nash-can/src/snapshots/nash_can__module__tests__unused_lambda_arg.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf = \\x -> 1\n"
info: diagnostic
---
nash::warning::unused_variable

  ⚠ Unused variable `x`.
   ╭─[src/Main.nash:3:6]
 2 │ 
 3 │ f = \x -> 1
   ·      ─
   ╰────
  help: Replace `x` with `_`.
