crates/nash-can/src/snapshots/nash_can__module__tests__unused_let_binding.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf =\n    let\n        x = 1\n    in\n    2\n"
info: diagnostic
---
nash::warning::unused_definition

  ⚠ Unused definition `x`.
   ╭─[src/Main.nash:5:9]
 4 │     let
 5 │         x = 1
   ·         ─
 6 │     in
   ╰────
  help: Remove the definition if it is not needed.
