crates/nash-can/src/snapshots/nash_can__module__tests__update_missing_record_var.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nmodule Main exposing (..)\n\nf = { nonexistent | x = 1 }\n"
info: diagnostic
---
nash::names::not_found_var

  × Unknown variable `nonexistent`.
   ╭─[src/Main.nash:3:7]
 2 │ 
 3 │ f = { nonexistent | x = 1 }
   ·       ───────────
   ╰────
  help: Similar names:

            f
            Builtin.bData
            Builtin.iData
            Builtin.listData
