crates/nash-can/src/snapshots/nash_can__module__tests__validator_main_explicitly_exposed.snap
---
source: crates/nash-can/src/module.rs
description: "Code:\n\nvalidator module Foo exposing (main)\n\nmain ctx = ()\n"
---
Module {
    tests: [],
    traits: [],
    impls: [],
    kind: Validator(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 1,
                column: 10,
            },
        },
    ),
    name: ModuleName {
        package: None,
        name: "Foo",
    },
    exports: Explicit(
        [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 32,
                    },
                    end: Position {
                        line: 1,
                        column: 36,
                    },
                },
                value: Value(
                    "main",
                ),
            },
        ],
    ),
    docs: NoDocs(
        Region {
            start: Position {
                line: 1,
                column: 1,
            },
            end: Position {
                line: 4,
                column: 1,
            },
        },
    ),
    decls: Declare {
        definition: Def {
            name: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 1,
                    },
                    end: Position {
                        line: 3,
                        column: 5,
                    },
                },
                value: "main",
            },
            args: [
                Located {
                    region: Region {
                        start: Position {
                            line: 3,
                            column: 6,
                        },
                        end: Position {
                            line: 3,
                            column: 9,
                        },
                    },
                    value: Var(
                        "ctx",
                    ),
                },
            ],
            body: Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 12,
                    },
                    end: Position {
                        line: 3,
                        column: 14,
                    },
                },
                value: Unit,
            },
        },
        next: Empty,
    },
    unions: [],
    aliases: [],
    binops: [],
}
